--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -24,19 +24,19 @@
         content="vip视频解析,vip视频在线解析,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析,vip音乐解析">
     <meta name="description"
         content="675解析VIP视频免费看，在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，全网影视vip，芒果vip解析方便广大用户VIP视频服务，最新电影最新电视剧在线免费观看">
+    <style>
+    .text{text-align: center;color: #999;font-size: 14px;line-height: 40px;}
+    .text .line{border-bottom: 1px solid rgb(170, 169, 169);width: 50%;display: inline-block;}
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div class="text">
+      <p>支持腾讯，优酷，爱奇艺，PPTV，搜狐，芒果，乐视，M3U8等VIP视频解析！</p>
+      <p>仅供学习参考，勿用非法用途！本站不承担任何责任！</p>
+      <p>全网VIP视频会员免广告看电影,感谢大家的支持。</p>
+      <p class="line"></p>
+    </div>
   </body>
 </html>
