--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,18 +26,40 @@
     <meta name="description"
         content="675解析VIP视频免费看，在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，全网影视vip，芒果vip解析方便广大用户VIP视频服务，最新电影最新电视剧在线免费观看">
     <style>
-    .text{text-align: center;color: #999;font-size: 14px;line-height: 40px;}
-    .text .line{border-bottom: 1px solid rgb(170, 169, 169);width: 50%;display: inline-block;}
+        .text {
+            text-align: center;
+            color: #999;
+            font-size: 14px;
+            line-height: 40px;
+        }
+
+        .text .line {
+            border-bottom: 1px solid rgb(170, 169, 169);
+            width: 60%;
+            display: inline-block;
+        }
+
+        .text .left {
+            width: 60%;
+            text-align: left;
+            display: inline-block;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div class="text">
-      <p>支持腾讯，优酷，爱奇艺，PPTV，搜狐，芒果，乐视，M3U8等VIP视频解析！</p>
-      <p>仅供学习参考，勿用非法用途！本站不承担任何责任！</p>
-      <p>全网VIP视频会员免广告看电影,感谢大家的支持。</p>
-      <p class="line"></p>
+        <p>支持腾讯，优酷，爱奇艺，PPTV，搜狐，芒果，乐视，M3U8等VIP视频解析！</p>
+        <p>仅供学习参考，勿用非法用途！本站不承担任何责任！</p>
+        <p>全网VIP视频会员免广告看电影,感谢大家的支持。</p>
+        <p class="line"></p>
+        <p class="left">本站解析接口：http://www.ai675.com?url=</p>
+        <p class="left">本站源码下载：版本1.52 <a href="#">点击下载</a></p>
+        <p class="line"></p>
+        <p class="left">友情链接：</p>
     </div>
-  </body>
+</body>
+
 </html>
