--- a/public/index.html
+++ b/public/index.html
@@ -25,40 +25,35 @@
         content="vip视频解析,vip视频在线解析,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析,vip音乐解析">
     <meta name="description"
         content="675解析VIP视频免费看，在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，全网影视vip，芒果vip解析方便广大用户VIP视频服务，最新电影最新电视剧在线免费观看">
-    <style>
-        .text {
-            text-align: center;
-            color: #999;
-            font-size: 14px;
-            line-height: 40px;
-        }
-
-        .text .line {
-            border-bottom: 1px solid rgb(170, 169, 169);
-            width: 60%;
-            display: inline-block;
-        }
-
-        .text .left {
-            width: 60%;
-            text-align: left;
-            display: inline-block;
-        }
-    </style>
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?3fc0330a1e4913ab8a812bd119e03e9e";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
 </head>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+        <h1>智能在线视频解析系统</h1>
+        <p>免费全网影视VIP视频vip会员免广告看电影！若播放异常，刷新，更换线路尝试哦！</p>
+    </header>
     <div id="root"></div>
     <div class="text">
         <p>支持腾讯，优酷，爱奇艺，PPTV，搜狐，芒果，乐视，M3U8等VIP视频解析！</p>
         <p>仅供学习参考，勿用非法用途！本站不承担任何责任！</p>
         <p>全网VIP视频会员免广告看电影,感谢大家的支持。</p>
         <p class="line"></p>
-        <p class="left">本站解析接口：http://www.ai675.com?url=</p>
-        <p class="left">本站源码下载：版本1.52 <a href="#">点击下载</a></p>
+        <p class="left fw">本站解析接口：http://www.ai675.com?url=</p>
+        <p class="left">接口支持所有影视cms系统，自动切换最快解析线路，解析支持移动端，无广告。</p>
+        <p class="left fw">本站源码下载：版本1.52 <a href="/675jx.zip">点击下载</a></p>
+        <p class="left">下载源码包，解压直接上传至网站目录就可以有一个和本站一样的视频解析站。</p>
         <p class="line"></p>
-        <p class="left">友情链接：</p>
+        <p class="left">友情链接：<a href="http://v.sigu.me/" class="link">思古视频</a><a href="https://www.aiyexue.com" class="link">夜学教程网</a></p>
     </div>
 </body>
 
