--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <script src="./hls.min.js"></script>
     <title>675智能解析-vip视频解析</title>
     <meta name="keywords"
         content="vip视频解析,vip视频在线解析,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析,vip音乐解析">
@@ -44,13 +32,11 @@
     </header>
     <div id="root"></div>
     <div class="text">
-        <p>仅供学习参考，勿用非法用途！本站不承担任何责任！</p>
+        <p>仅供学习参考，勿用非法用途！</p>
         <p>全网VIP视频会员免广告看电影,感谢大家的支持。</p>
         <p class="line"></p>
-        <p class="left fw">本站解析接口：http://www.ai675.com?url=</p>
-        <p class="left">接口支持所有影视cms系统，自动切换最快解析线路，解析支持移动端，无广告。</p>
-        <p class="left fw">本站源码下载：版本1.52 <a href="/675jx.zip">点击下载</a></p>
-        <p class="left">下载源码包，解压直接上传至网站目录就可以有一个和本站一样的视频解析站。</p>
+        <p class="left fw">学习交流群: 306704676 </p>
+        <p class="left fw">Github: <a href="https://github.com/zeophone/react-jx">https://github.com/zeophone/react-jx</a></p> 
         <p class="line"></p>
         <p class="left">友情链接：<a href="http://v.sigu.me/" class="link">思古视频</a><a href="https://www.aiyexue.com" class="link">夜学教程网</a></p>
     </div>
