--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,8 @@
         <p>全网VIP视频会员免广告看电影,感谢大家的支持。</p>
         <p class="line"></p>
         <p class="left fw">学习交流群: 306704676 </p>
-        <p class="left fw">Github: <a href="https://github.com/zeophone/react-jx">https://github.com/zeophone/react-jx</a></p> 
         <p class="line"></p>
-        <p class="left">友情链接：<a href="http://v.sigu.me/" class="link">思古视频</a><a href="https://www.aiyexue.com" class="link">夜学教程网</a></p>
+        <p class="left">友情链接：<a href="https://www.aiyexue.com" class="link">夜学教程网</a></p>
     </div>
 </body>
 
