新增电视剧电影搜索

--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,15 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <header>
-        <h1>智能在线视频解析系统</h1>
+        <h1>爱看影院在线视频解析</h1>
         <p>免费全网影视VIP视频vip会员免广告看电影！若播放异常，刷新，更换线路尝试哦！</p>
     </header>
     <div id="root"></div>
     <div class="text">
         <p>仅供学习参考，勿用非法用途！</p>
-        <p>全网VIP视频会员免广告看电影,感谢大家的支持。</p>
+        <p>搜索功能仅支持腾讯爱奇艺优酷等最新上线的视频和电视剧。</p>
         <p class="line"></p>
-        <p class="left fw">学习交流群: 306704676 </p>
+        <p class="left fw">学习交流群: 306704676</p>
         <p class="line"></p>
         <p class="left">友情链接：<a href="https://www.aiyexue.com" class="link">夜学教程网</a></p>
     </div>
